feat: Improve webhooks + cron clients
